--- a/train_offline.ipynb
+++ b/train_offline.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models.DBML_time import PSM"
+    "from models.DBML_offline import PSM"
    ]
   },
   {
